# quits

./: .editorconfig  .gitignore  331.js  331.js.map  650.js.map  730.js.map  731.js  731.js.map  Cargo.toml  README.md  build.gradle.kts  composeApp.js  composeApp.js.map  flake.nix  gradle.properties  settings.gradle.kts  shell.nix
.github/: ci-gradle.properties  dependabot.yml
.github/workflows/: android.yml  ci.yml  dependabot-wasmjs-refresh.yml  ios.yml  publish-web.yml  release.yml  update-android-sdk.yml  update-web-deps.yml  web.yml
androidApp/: build.gradle.kts
androidApp/src/debug/: AndroidManifest.xml
androidApp/src/main/: AndroidManifest.xml
composeApp/: build.gradle.kts
composeApp/schemas/nz.eloque.quits.data.db.QuitsDatabase/: 1.json  2.json  3.json
composeApp/webpack.config.d/: cross-origin-isolation.js
composeResources/nz.eloque.compose_kit.resources/values-ar/: strings.commonMain.cvr
composeResources/nz.eloque.compose_kit.resources/values-ca/: strings.commonMain.cvr
crates/quits-server/: Cargo.toml
crates/quits-server/migrations/: 0001_init.sql  0002_e2ee_lookup_id.sql
crates/quits-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/quits-server/tests/: sync.rs
gradle/: libs.versions.toml
icon/: generate-assets.sh
iosApp/: project.yml
iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift
nix/: image.nix  module.nix  server.nix  web-module.nix  web.nix
productionExecutable/: 650.js  730.js
sqliteWebWorker/: build.gradle.kts
sqliteWebWorker/worker/: package.json  worker.js
(+152 files in other folders)
