[package]
name = "quits-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "quits-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
