[package]
name = "quits-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "quits-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
uuid = { version = "1.23.3", features = ["v4"] }
base64 = "0.22.1"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
